<resources>
    <string name="app_name">RetrofitEncyclopedia</string>
    <string name="buttonCharacters">Lista postaci</string>
    <string name="searchLabel">Wpisz imię szukanej postaci</string>
    <string name="characterName">Imię i nazwisko:</string>
    <string name="characterStatus">Status:</string>
    <string name="characterGender">Płeć:</string>
    <string name="characterSpecies">Gatunek:</string>
    <string name="characterOrigin">Pochodzenie:</string>
    <string name="title">Encyklopedia postaci</string>
    <string name="searchLabel2">Wyszukaj listę postaci</string>
    <string name="searchLabel3">Wpisz Id szukanej postaci</string>
    <string name="characterTitle">Karta postaci</string>
    <string name="goBack">Wstecz</string>
    <string name="searchTitle">Wyszukaj postać</string>
    <string name="searchLabel4">Wpisz status szukanych postaci</string>
    <string name="labelList">Lista postaci</string>
    <string name="labelListCard">Karty postaci</string>
    <string name="labelCharacterCard">Wyszukaj postać</string>
    <string name="previous">Poprzedni</string>
    <string name="next">Następny</string>
    <string name="textViewId">Id:</string>
    <string name="buttonInfo">Informacje</string>
    <string name="Information">Baza postaci występujących w Rick and Morty. Całość zawiera 671 postaci.</string>
    <string name="radioAlive">Żywy</string>
    <string name="radioDead">Martwy</string>
    <string name="radioFemale">Kobieta</string>
    <string name="radioMale">Mężczyzna</string>
    <string name="radioStatus">Wybierz status postaci</string>
    <string name="radioGender">Wybierz płeć postaci</string>
</resources>