<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharactersPage">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="211dp"
        android:layout_height="201dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewName"
        style="@style/textDataStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharacterTitle" />

    <TextView
        android:id="@+id/textViewGender"
        style="@style/textDataStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelGender"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecies" />

    <TextView
        android:id="@+id/textViewSpecies"
        style="@style/textDataStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelSpecies"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    <TextView
        android:id="@+id/textViewStatus"
        style="@style/textDataStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSpecies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLabelStatus"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewCharacterTitle"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="320dp"
        android:text="@string/characterTitle"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelName"
        style="@style/textLabelStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="23dp"
        android:text="@string/characterName"
        app:layout_constraintBottom_toTopOf="@+id/textViewLabelStatus"
        app:layout_constraintEnd_toStartOf="@+id/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelStatus"
        style="@style/textLabelStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="18dp"
        android:text="@string/characterStatus"
        app:layout_constraintBottom_toTopOf="@+id/textViewLabelSpecies"
        app:layout_constraintEnd_toStartOf="@+id/textViewStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelName" />

    <TextView
        android:id="@+id/textViewLabelSpecies"
        style="@style/textLabelStyle"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/characterSpecies"
        app:layout_constraintBottom_toTopOf="@+id/textViewLabelGender"
        app:layout_constraintEnd_toStartOf="@+id/textViewSpecies"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelStatus" />

    <TextView
        android:id="@+id/textViewLabelGender"
        style="@style/textLabelStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="172dp"
        android:text="@string/characterGender"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelSpecies" />

    <Button
        android:id="@+id/button"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_shape"
        android:text="@string/goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>